// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eot > eot 1`] = `
{
  "hash": "af925eb3b0758c99cad0eafb37f84e2cd7ab1d1d410d0c627ded3384d7b57927",
  "newSize": "6.80 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 ttf 1`] = `
{
  "hash": "b21c4a846f28b4a6f1d7c10fcb268978c6246fdcb67946534773a2a1a8f1e77c",
  "newSize": "6.60 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 woff 1`] = `
{
  "hash": "920988f0ed64743d4d3755d57f242548545e8eed6b731c92ed0f7c87f8c6b09d",
  "newSize": "6.67 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 woff2 1`] = `
{
  "hash": "3357da4ca28e6ac2d4d173c84b2d161c5777bbbc5c7caeaba026166bd7a2843d",
  "newSize": "3.48 kB",
  "originSize": "2.07 MB",
}
`;

exports[`icon font > css 1`] = `
{
  "hash": "d148b1961a21a41c157dced63d86b29a2eee08b9044a0feb02e7e7df6fcb3d5a",
  "newSize": "4.93 kB",
  "originSize": "2.10 MB",
}
`;

exports[`icon font > html + css 1`] = `
{
  "hash": "d148b1961a21a41c157dced63d86b29a2eee08b9044a0feb02e7e7df6fcb3d5a",
  "newSize": "4.93 kB",
  "originSize": "2.10 MB",
}
`;

exports[`icon font > html 1`] = `
{
  "hash": "861a016c783b596ce167143deb3a922a7ef3d0a34d85ae90ebe959c12ced78af",
  "newSize": "4.45 kB",
  "originSize": "2.10 MB",
}
`;

exports[`otf > otf 2 eot 1`] = `
{
  "hash": "98dd4339d564aff80fff09b0af683fff4c4a22d97f21d058ba5c88f67e9c0199",
  "newSize": "7.09 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 ttf 1`] = `
{
  "hash": "97f6b30721edba7c1ac6b9c843539b89ef3b2056569ad67f8bdb15c7beecfe06",
  "newSize": "6.89 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 woff 1`] = `
{
  "hash": "4d31675be71816e0674405f97d35fadd4f8db6efda8cf064e99ff7a916cf542c",
  "newSize": "6.96 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 woff2 1`] = `
{
  "hash": "28ae63ab36ae05d8fede28f297d8a517cf3bc5e7ce46544ab2536838cc75113d",
  "newSize": "3.56 kB",
  "originSize": "1.63 MB",
}
`;

exports[`ttf > ttf 1`] = `
{
  "hash": "b21c4a846f28b4a6f1d7c10fcb268978c6246fdcb67946534773a2a1a8f1e77c",
  "newSize": "6.60 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 eot 1`] = `
{
  "hash": "af925eb3b0758c99cad0eafb37f84e2cd7ab1d1d410d0c627ded3384d7b57927",
  "newSize": "6.80 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 woff 1`] = `
{
  "hash": "920988f0ed64743d4d3755d57f242548545e8eed6b731c92ed0f7c87f8c6b09d",
  "newSize": "6.67 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 woff2 1`] = `
{
  "hash": "3357da4ca28e6ac2d4d173c84b2d161c5777bbbc5c7caeaba026166bd7a2843d",
  "newSize": "3.48 kB",
  "originSize": "2.10 MB",
}
`;

exports[`woff > woff 1`] = `
{
  "hash": "920988f0ed64743d4d3755d57f242548545e8eed6b731c92ed0f7c87f8c6b09d",
  "newSize": "6.67 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 eot 1`] = `
{
  "hash": "af925eb3b0758c99cad0eafb37f84e2cd7ab1d1d410d0c627ded3384d7b57927",
  "newSize": "6.80 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 ttf 1`] = `
{
  "hash": "b21c4a846f28b4a6f1d7c10fcb268978c6246fdcb67946534773a2a1a8f1e77c",
  "newSize": "6.60 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 woff 1`] = `
{
  "hash": "920988f0ed64743d4d3755d57f242548545e8eed6b731c92ed0f7c87f8c6b09d",
  "newSize": "6.67 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff2 > woff2 1`] = `
{
  "hash": "3357da4ca28e6ac2d4d173c84b2d161c5777bbbc5c7caeaba026166bd7a2843d",
  "newSize": "3.48 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 eot 1`] = `
{
  "hash": "542c2133ff82a82c7e58f468f6d7a925c4a5c5f83e46103f828b2827a79545ea",
  "newSize": "6.80 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 ttf 1`] = `
{
  "hash": "e13957742c8bc6abc348ac23157538ef92410a444cae58ae5f4eac475f97ae1c",
  "newSize": "6.60 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 woff 1`] = `
{
  "hash": "c72e9571624ebae22cf67a5d4728c4877b44d3a4432ac17670e067b3d2190fa8",
  "newSize": "6.67 kB",
  "originSize": "942.54 kB",
}
`;
